--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+
 body {
+  background-color:#edf2ff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media screen and (max-width: 350px) {
+  html {
+    font-size: 12px;
+  }
 }
